build/log/idf_py_stdout_output_10726
[1/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/twai_periph.c.obj
[2/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/rmt_periph.c.obj
[3/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/timer_periph.c.obj
[4/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/temperature_sensor_periph.c.obj
[5/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/pcnt_periph.c.obj
[6/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/usb_periph.c.obj
[7/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/uart_periph.c.obj
[8/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/usb_otg_periph.c.obj
[9/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/rtc_io_periph.c.obj
[10/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/spi_periph.c.obj
[11/595] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/esp_memory_utils.c.obj
[12/595] Building C object esp-idf/soc/CMakeFiles/__idf_soc.dir/esp32s2/touch_sensor_periph.c.obj
[13/595] Performing build step for 'bootloader'
[1/1] cd /home/edgie/eclipse-workspace/usb_hid_test/build/bootloader/esp-idf/esptool_py && /home/edgie/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/edgie/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/edgie/eclipse-workspace/usb_hid_test/build/bootloader/bootloader.bin
Bootloader binary size 0x5590 bytes. 0x1a70 bytes (24%) free.
[14/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/cpu.c.obj
[15/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/regi2c_ctrl.c.obj
[16/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/clk_ctrl_os.c.obj
[17/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/sleep_mac_bb.c.obj
[18/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/esp_clk.c.obj
[19/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/hw_random.c.obj
[20/593] Building C object esp-idf/esp_system/CMakeFiles/__idf_esp_system.dir/port/soc/esp32s2/usb_console.c.obj
FAILED: esp-idf/esp_system/CMakeFiles/__idf_esp_system.dir/port/soc/esp32s2/usb_console.c.obj 
/home/edgie/.espressif/tools/xtensa-esp32s2-elf/esp-2022r1-11.2.0/xtensa-esp32s2-elf/bin/xtensa-esp32s2-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-2938-g8bf18b76ac\" -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/edgie/eclipse-workspace/usb_hid_test/build/config -I/home/edgie/esp/esp-idf/components/esp_system/include -I/home/edgie/esp/esp-idf/components/esp_system/port/include -I/home/edgie/esp/esp-idf/components/esp_system/port/. -I/home/edgie/esp/esp-idf/components/esp_system/port/soc -I/home/edgie/esp/esp-idf/components/esp_system/port/include/private -I/home/edgie/esp/esp-idf/components/newlib/platform_include -I/home/edgie/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/edgie/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/edgie/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/edgie/esp/esp-idf/components/freertos/esp_additions/include -I/home/edgie/esp/esp-idf/components/esp_hw_support/include -I/home/edgie/esp/esp-idf/components/esp_hw_support/include/soc -I/home/edgie/esp/esp-idf/components/esp_hw_support/include/soc/esp32s2 -I/home/edgie/esp/esp-idf/components/esp_hw_support/port/esp32s2/. -I/home/edgie/esp/esp-idf/components/esp_hw_support/port/esp32s2/private_include -I/home/edgie/esp/esp-idf/components/heap/include -I/home/edgie/esp/esp-idf/components/log/include -I/home/edgie/esp/esp-idf/components/soc/include -I/home/edgie/esp/esp-idf/components/soc/esp32s2/. -I/home/edgie/esp/esp-idf/components/soc/esp32s2/include -I/home/edgie/esp/esp-idf/components/hal/esp32s2/include -I/home/edgie/esp/esp-idf/components/hal/include -I/home/edgie/esp/esp-idf/components/hal/platform_port/include -I/home/edgie/esp/esp-idf/components/esp_rom/include -I/home/edgie/esp/esp-idf/components/esp_rom/include/esp32s2 -I/home/edgie/esp/esp-idf/components/esp_rom/esp32s2 -I/home/edgie/esp/esp-idf/components/esp_common/include -I/home/edgie/esp/esp-idf/components/xtensa/include -I/home/edgie/esp/esp-idf/components/xtensa/esp32s2/include -I/home/edgie/esp/esp-idf/components/lwip/include -I/home/edgie/esp/esp-idf/components/lwip/include/apps -I/home/edgie/esp/esp-idf/components/lwip/include/apps/sntp -I/home/edgie/esp/esp-idf/components/lwip/lwip/src/include -I/home/edgie/esp/esp-idf/components/lwip/port/esp32/include -I/home/edgie/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/edgie/esp/esp-idf/components/spi_flash/include -I/home/edgie/esp/esp-idf/components/esp_timer/include -I/home/edgie/esp/esp-idf/components/pthread/include -I/home/edgie/esp/esp-idf/components/bootloader_support/include -I/home/edgie/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/edgie/esp/esp-idf/components/efuse/include -I/home/edgie/esp/esp-idf/components/efuse/esp32s2/include -I/home/edgie/esp/esp-idf/components/driver/include -I/home/edgie/esp/esp-idf/components/driver/deprecated -I/home/edgie/esp/esp-idf/components/driver/esp32s2/include -I/home/edgie/esp/esp-idf/components/esp_pm/include -I/home/edgie/esp/esp-idf/components/esp_ringbuf/include -I/home/edgie/esp/esp-idf/components/esp_partition/include -I/home/edgie/esp/esp-idf/components/esp_gdbstub/include -I/home/edgie/esp/esp-idf/components/esp_gdbstub/xtensa -I/home/edgie/esp/esp-idf/components/esp_gdbstub/esp32s2 -I/home/edgie/esp/esp-idf/components/esp_app_format/include -I/home/edgie/esp/esp-idf/components/vfs/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/edgie/eclipse-workspace/usb_hid_test=. -fmacro-prefix-map=/home/edgie/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -Wno-format -MD -MT esp-idf/esp_system/CMakeFiles/__idf_esp_system.dir/port/soc/esp32s2/usb_console.c.obj -MF esp-idf/esp_system/CMakeFiles/__idf_esp_system.dir/port/soc/esp32s2/usb_console.c.obj.d -o esp-idf/esp_system/CMakeFiles/__idf_esp_system.dir/port/soc/esp32s2/usb_console.c.obj -c /home/edgie/esp/esp-idf/components/esp_system/port/soc/esp32s2/usb_console.c
/home/edgie/esp/esp-idf/components/esp_system/port/soc/esp32s2/usb_console.c: In function 'esp_usb_console_init':
/home/edgie/esp/esp-idf/components/esp_system/port/soc/esp32s2/usb_console.c:291:5: error: implicit declaration of function 'ets_install_putc1' [-Werror=implicit-function-declaration]
  291 |     ets_install_putc1(&esp_usb_console_write_char);
      |     ^~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[21/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/mac_addr.c.obj
[22/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/port/esp32s2/io_mux.c.obj
[23/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/port/esp32s2/esp_crypto_lock.c.obj
[24/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/dma/async_memcpy_impl_cp_dma.c.obj
[25/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/port/esp32s2/systimer.c.obj
[26/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/rtc_module.c.obj
[27/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/periph_ctrl.c.obj
[28/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/sleep_gpio.c.obj
[29/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/intr_alloc.c.obj
[30/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/rtc_wdt.c.obj
[31/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/adc_share_hw_ctrl.c.obj
[32/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/dma/esp_async_memcpy.c.obj
[33/593] Building C object esp-idf/esp_hw_support/CMakeFiles/__idf_esp_hw_support.dir/sleep_modes.c.obj
ninja: build stopped: subcommand failed.
